# Anamnesis

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
bindings/python/examples/: langgraph_mcp.py
bindings/python/python/anamnesis/: __init__.py  _core.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_scoring.py
bindings/python/validation/: validate_guarantees.py
docs/: agent-plugin-design.md
docs/agent-memory/: MEMORY.md  README.md  project_anamnesis_python_binding.md  project_anamnesis_research_roadmap.md  reference_anamnesis_session_hook.md  reference_calibration_research_verdicts.md
examples/: seed.rs
plugin/: README.md  install-ana.sh  install.sh
plugin/.claude-plugin/: plugin.json
plugin/commands/: calibration.md  decide.md  predict.md  resolve.md
plugin/hooks/: hooks.json  post-tool.sh  session-start.sh  stop.sh  user-prompt.sh
plugin/skills/calibration-protocol/: SKILL.md
src/: lib.rs  main.rs  mcp.rs  model.rs  report.rs  scoring.rs  store.rs
tests/: cli.rs
