# Python bindings for the Anamnesis scoring core.
#
# This is a STANDALONE crate (note the empty [workspace] table below, which roots
# it as its own workspace so it is never absorbed by an ancestor Cargo.toml). It
# depends on the core `anamnesis` library by path and exposes its pure scoring
# functions to Python via PyO3 + maturin. The core stays dependency-clean; all the
# pyo3 machinery lives here.
[package]
name = "anamnesis-py"
version = "0.3.0"
edition = "2021"
description = "PyO3 bindings exposing the Anamnesis calibration/scoring core to Python."
license = "MIT"
publish = false

[lib]
# Built as a C dynamic library; maturin renames the artifact to the module named
# in pyproject.toml ([tool.maturin] module-name = "anamnesis._core").
name = "anamnesis"
crate-type = ["cdylib"]

[dependencies]
# The single source of truth. Only the library target (scoring/model/report/...)
# is compiled here — the `ana` binary and its clap dependency are not pulled in.
anamnesis = { path = "../.." }
# abi3-py38: one forward-compatible wheel for CPython 3.8+. `extension-module` is
# kept as an opt-in feature (enabled by maturin) so a bare `cargo build` for
# analysis doesn't need to link libpython.
pyo3 = { version = "0.23", features = ["abi3-py38"] }

[features]
extension-module = ["pyo3/extension-module"]

[workspace]
